--- a/package.json
+++ b/package.json
@@ -16,9 +16,8 @@
     "core-js": "^3.8.3",
     "dayjs": "^1.11.10",
     "dayjs-plugin-utc": "^0.1.2",
-    "element-plus": "^2.5.3",
-    "vue": "^3.2.13",
-    "vue3-baidu-map-gl": "^2.3.2"
+    "element-plus": "^2.5.5",
+    "vue": "^3.2.13"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
