--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   },
   "main": "background.js",
   "dependencies": {
+    "@element-plus/icons-vue": "^2.3.1",
+    "axios": "^1.6.7",
     "core-js": "^3.8.3",
     "dayjs": "^1.11.10",
     "dayjs-plugin-utc": "^0.1.2",
