--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,12 @@
 .DS_Store
 node_modules
 /dist
+Python_app/dist
+Python_app/cache
+Python_app/build
+Python_app/__pycache__
 
+*.sqlite
 
 # local env files
 .env.local
@@ -21,6 +26,8 @@ pnpm-debug.log*
 *.njsproj
 *.sln
 *.sw?
+
+
 
 #Electron-builder output
 /dist_electron
