--- a/.gitignore
+++ b/.gitignore
@@ -3,8 +3,8 @@ node_modules
 /dist
 Python_app/dist
 Python_app/cache
-Python_app/build
-Python_app/__pycache__
+/Python_app/build/
+**/__pycache__
 
 *.sqlite
 
