--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dayjs": "^1.11.10",
     "dayjs-plugin-utc": "^0.1.2",
     "element-plus": "^2.5.5",
+    "socket.io-client": "^4.7.4",
     "vue": "^3.2.13"
   },
   "devDependencies": {
